<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple_calculator"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:lines="3"
                android:gravity="bottom|right"
                tools:ignore="RtlHardcoded" />
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="5"
                android:layout_marginTop="@dimen/spacing_medium">
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_divide"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/divide"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_multiply"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/multiply"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_clean"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/clean"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_seven"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/seven"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_eight"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/eight"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_nine"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/nine"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_four"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/four"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_five"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/five"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_six"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/six"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_reduce"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/reduce"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/two"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/three"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <ImageButton
                    android:id="@+id/btn_sqrt"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:scaleType="centerInside"
                    android:background="@drawable/btn1"
                    android:src="@drawable/sqrt"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                <Button
                    android:id="@+id/btn_part"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/part"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_zero"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_point"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/point"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/btn1"
                    android:layout_marginBottom="@dimen/spacing_medium"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>